liteOS-M/rust_kernel/kernel/test/los_memory_c.h

#define OS_LITTLE_ENDIAN 4660
#define OS_BIG_ENDIAN 17185
#define OS_BYTE_ORDER 4660
#define LOS_OK 0
#define OS_FAIL 1
#define OS_64BIT_MAX -1
#define __LIBATOMIC_N_LOCKS 16
#define OS_SYS_CLOCK 1000000
#define LOSCFG_BASE_CORE_TICK_PER_SECOND 100
#define LOSCFG_BASE_CORE_TICK_PER_SECOND_MINI 1000
#define LOSCFG_BASE_CORE_TICK_PERIOD_MS 10
#define LOSCFG_BASE_CORE_TICK_WTIMER 0
#define LOSCFG_BASE_CORE_TICK_RESPONSE_MAX 0
#define LOSCFG_PLATFORM_HWI 1
#define LOSCFG_USE_SYSTEM_DEFINED_INTERRUPT 1
#define LOSCFG_PLATFORM_HWI_LIMIT 32
#define LOSCFG_BASE_CORE_TSK_DEFAULT_PRIO 10
#define LOSCFG_BASE_CORE_TSK_LIMIT 5
#define LOSCFG_BASE_CORE_TSK_IDLE_STACK_SIZE 384
#define LOSCFG_BASE_CORE_TSK_DEFAULT_STACK_SIZE 1024
#define LOSCFG_BASE_CORE_TIMESLICE 1
#define LOSCFG_BASE_CORE_TIMESLICE_TIMEOUT 20000
#define LOSCFG_BASE_CORE_TSK_MONITOR 0
#define LOSCFG_BASE_CORE_EXC_TSK_SWITCH 0
#define LOS_TASK_PRIORITY_HIGHEST 0
#define LOS_TASK_PRIORITY_LOWEST 31
#define LOSCFG_BASE_CORE_TASKSTACK_INDEPENDENT 0
#define LOSCFG_STACK_POINT_ALIGN_SIZE 8
#define LOSCFG_BASE_IPC_SEM 1
#define LOSCFG_BASE_IPC_SEM_LIMIT 6
#define OS_SEM_COUNTING_MAX_COUNT 65535
#define LOSCFG_BASE_IPC_MUX 1
#define LOSCFG_BASE_IPC_MUX_LIMIT 6
#define LOSCFG_BASE_IPC_QUEUE 1
#define LOSCFG_BASE_IPC_QUEUE_LIMIT 6
#define LOSCFG_BASE_IPC_STATIC_QUEUE_LIMIT 3
#define LOSCFG_BASE_CORE_SWTMR 1
#define LOSCFG_BASE_CORE_SWTMR_LIMIT 5
#define LOSCFG_BASE_CORE_TSK_SWTMR_STACK_SIZE 1024
#define LOSCFG_BASE_CORE_SWTMR_ALIGN 0
#define OS_SWTMR_HANDLE_QUEUE_SIZE 5
#define LOS_COMMON_DIVISOR 10
#define LOSCFG_SYS_EXTERNAL_HEAP 0
#define LOSCFG_SYS_HEAP_SIZE 65536
#define LOSCFG_MEM_MUL_POOL 1
#define LOSCFG_MEM_FREE_BY_TASKID 0
#define LOSCFG_BASE_MEM_NODE_INTEGRITY_CHECK 0
#define LOSCFG_MEM_OMIT_LR_CNT 4
#define LOSCFG_MEM_RECORD_LR_CNT 3
#define LOSCFG_MEM_LEAKCHECK_RECORD_MAX_NUM 1024
#define LOSCFG_MEM_WATERLINE 1
#define OS_SYS_MEM_NUM 20
#define OS_SYS_NOCACHEMEM_SIZE 0
#define LOSCFG_MEM_MUL_REGIONS 0
#define LOSCFG_EXC_HARDWARE_STACK_PROTECTION 0
#define CMSIS_OS_VER 2
#define LOSCFG_KERNEL_PRINTF 1
#define LOSCFG_MPU_ENABLE 0
#define LOSCFG_TASK_MEM_USED 0
#define LOSCFG_PLATFORM_HWI_WITH_ARG 0
#define LOSCFG_ARCH_HWI_VECTOR_ALIGN 256
#define LOSCFG_KERNEL_SIGNAL 0
#define LOSCFG_KERNEL_PM 0
#define LOSCFG_KERNEL_PM_IDLE 0
#define LOSCFG_SHELL_STACK_SIZE 4096
#define TICK_CHECK 67108864
#define CYCLE_CHECK 4294967295
#define SHIFT_32_BIT 32
#define MAX_HOUR 24
#define MAX_MINUTES 60
#define MAX_SECONDS 60
#define MILSEC 1000
#define RTC_WAKEUPCLOCK_RTCCLK 32768
#define RTC_WAKEUPCLOCK_RTCCLK_DIV 16
#define RTC_CALIBRATE_SLEEP_TIME 8
#define MACHINE_CYCLE_DEALAY_TIMES 400
typedef int INT32;
typedef unsigned int UINTPTR;
typedef unsigned int UINT32;
typedef UINT32 HWI_HANDLE_T;
typedef char CHAR;
typedef struct tagIrqParam {
  /**
   *< The interrupt number
   */
  int swIrq;
  /**
   *< The pointer to the device ID that launches the interrupt
   */
  void *pDevId;
  /**
   *< The interrupt name
   */
  const CHAR *pName;
} tagIrqParam;
typedef struct tagIrqParam HwiIrqParam;
typedef unsigned short UINT16;
typedef UINT16 HWI_PRIOR_T;
typedef UINT16 HWI_MODE_T;
typedef void (*HWI_PROC_FUNC)(void);
typedef unsigned char UINT8;
typedef struct HwiControllerOps {
  UINT32 (*triggerIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*clearIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*enableIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*disableIrq)(HWI_HANDLE_T hwiNum);
  UINT32 (*setIrqPriority)(HWI_HANDLE_T hwiNum, UINT8 priority);
  UINT32 (*getCurIrqNum)(void);
  UINT32 (*createIrq)(HWI_HANDLE_T hwiNum, HWI_PRIOR_T hwiPrio);
} HwiControllerOps;
typedef unsigned long long UINT64;
typedef unsigned int BOOL;
extern void __stack_chk_fail(void);
/**
 * @ingroup  los_interrupt
 * @brief Delete hardware interrupt.
 *
 * @par Description:
 * This API is used to delete hardware interrupt.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable
 *                       for a Cortex-A7 platform is [32,95].
 * @param  irqParam [IN] Type #HwiIrqParam *. ID of hardware interrupt which will base on
 *                                                when delete the hardware interrupt.
 * @retval #OS_ERRNO_HWI_NUM_INVALID              0x02000900: Invalid interrupt number.
 * @retval #LOS_OK                                0         : The interrupt is successfully delete.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern void __stack_chk_fail(void);
/**
 * @ingroup  los_interrupt
 * @brief Delete hardware interrupt.
 *
 * @par Description:
 * This API is used to delete hardware interrupt.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable
 *                       for a Cortex-A7 platform is [32,95].
 * @param  irqParam [IN] Type #HwiIrqParam *. ID of hardware interrupt which will base on
 *                                                when delete the hardware interrupt.
 * @retval #OS_ERRNO_HWI_NUM_INVALID              0x02000900: Invalid interrupt number.
 * @retval #LOS_OK                                0         : The interrupt is successfully delete.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern void __stack_chk_fail(void);
/**
 * @ingroup  los_interrupt
 * @brief Delete hardware interrupt.
 *
 * @par Description:
 * This API is used to delete hardware interrupt.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable
 *                       for a Cortex-A7 platform is [32,95].
 * @param  irqParam [IN] Type #HwiIrqParam *. ID of hardware interrupt which will base on
 *                                                when delete the hardware interrupt.
 * @retval #OS_ERRNO_HWI_NUM_INVALID              0x02000900: Invalid interrupt number.
 * @retval #LOS_OK                                0         : The interrupt is successfully delete.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);
extern void __stack_chk_fail(void);
/**
 * @ingroup  los_interrupt
 * @brief Delete hardware interrupt.
 *
 * @par Description:
 * This API is used to delete hardware interrupt.
 *
 * @attention
 * <ul>
 * <li>The hardware interrupt module is usable only when the configuration item for hardware
 * interrupt tailoring is enabled.</li>
 * <li>Hardware interrupt number value range: [OS_USER_HWI_MIN,OS_USER_HWI_MAX]. The value range
 * applicable for a Cortex-A7 platform is [32,95].</li>
 * <li>OS_HWI_MAX_NUM specifies the maximum number of interrupts that can be created.</li>
 * <li>Before executing an interrupt on a platform, refer to the chip manual of the platform.</li>
 * </ul>
 *
 * @param  hwiNum   [IN] Type#HWI_HANDLE_T: hardware interrupt number. The value range applicable
 *                       for a Cortex-A7 platform is [32,95].
 * @param  irqParam [IN] Type #HwiIrqParam *. ID of hardware interrupt which will base on
 *                                                when delete the hardware interrupt.
 * @retval #OS_ERRNO_HWI_NUM_INVALID              0x02000900: Invalid interrupt number.
 * @retval #LOS_OK                                0         : The interrupt is successfully delete.
 * @par Dependency:
 * <ul><li>los_interrupt.h: the header file that contains the API declaration.</li></ul>
 * @see None.
 */
extern UINT32 ArchHwiDelete(HWI_HANDLE_T hwiNum, HwiIrqParam *irqParam);